feat(spec-view): add dynamic cost estimation based on cache prediction
Resolve issue where estimated usage remained constant regardless of cache option selection in spec generation modal.

estimatedCost was hardcoded to totalTests without considering cache mode, and backend provided no cache hit prediction.

Adopted approach matching current tests with previous spec behaviors via name + file_path instead of replicating Worker's SHA256 hash algorithm.
Achieves ~99% accuracy without synchronization burden when Worker hash changes.
Added tooltip "Actual usage may differ from the estimate" to inform users about potential variance.

--- a/src/frontend/i18n/messages/en.json
+++ b/src/frontend/i18n/messages/en.json
@@ -399,6 +399,7 @@
       "estimatedCost": "This generation will use ~{count} tests",
       "afterGeneration": "After: ~{after} / {limit} tests",
       "current": "Current",
+      "estimatedCostNote": "Actual usage may differ from the estimate",
       "limit": "Limit",
       "afterUsageShort": "After ~{after} / {limit}",
       "warningMessage": "You're running low on your monthly quota. Consider upgrading your plan for more generations.",
